# cram_sherpa_sandbox

./: CMakeLists.txt  cram-sherpa-sandbox.asd  package.xml
launch/: load-semantic-map-json.launch  upload_donkey.launch
owl/: cram_galtelli.owl
resource/: Sherpa_Donkey.stl  hawk.dae  wasp.stl
resource/old/: Box.dae  Box_COL.stl  Box_VIS.dae  Full_Body_Col.dae  Operator_Point_at.dae.doesnt.work  iai_rmax.dae  iai_wasp.dae  iai_wasp.stl  quadrotor.dae  rmax.dae
src/: package.lisp  setup.lisp
