<?xml version="1.0"?>
<package format="2">
  <name>cram_sherpa_sandbox</name>
  <version>0.0.0</version>
  <description>cram_commander</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp</depend>
  <depend>cram_prolog</depend>
  <depend>cram_utilities</depend>
  <depend>cram_projection</depend>
  <depend>cram_language</depend>
  <depend>cram_bullet_reasoning</depend>
  <depend>cram_bullet_reasoning_utilities</depend>
  <depend>cram_sherpa_robots_common</depend>
  <depend>cram_sherpa_donkey</depend>
  <depend>cram_sherpa_red_wasp</depend>
  <depend>cram_sherpa_blue_wasp</depend>
  <depend>cram_sherpa_hawk</depend>
</package>
